plugins {
    id 'java'
    id 'application'
}

group = 'sl.hackathon'
version = '1.0.0'

repositories {
    mavenCentral()
}

dependencies {
    // Lombok - Reduce boilerplate code
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    testCompileOnly 'org.projectlombok:lombok:1.18.30'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'

    // JSON serialization - Jackson
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.15.0'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.2'

    // Logging - SLF4J + Logback
    implementation 'org.slf4j:slf4j-api:2.0.5'
    implementation 'ch.qos.logback:logback-classic:1.5.13'
    implementation 'ch.qos.logback:logback-core:1.5.19'

    // Jakarta WebSocket API
    implementation 'jakarta.websocket:jakarta.websocket-api:2.1.1'
    
    // Tyrus WebSocket Client (Jakarta WebSocket implementation)
    implementation 'org.glassfish.tyrus.bundles:tyrus-standalone-client:2.1.5'

    // Testing - JUnit 5
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
    
    // Mocking - Mockito
    testImplementation 'org.mockito:mockito-core:4.11.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:4.11.0'
}

java {
    sourceCompatibility = '21'
    targetCompatibility = '21'
}

application {
    mainClass = 'sl.hackathon.client.Main'
}

test {
    useJUnitPlatform()
}

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java']
        }
    }
    test {
        java {
            srcDirs = ['src/test/java']
        }
    }
}